# cogno-synapse

./: .gitignore  LICENSE  LOGGING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
cogno_synapse/: __init__.py  _math.py  _obs.py  anthropic_backend.py  base.py  bedrock_backend.py  cache.py  errors.py  factory.py  fallback.py  gemini_backend.py  groq_backend.py  ollama.py  openai_backend.py  tool_parsing.py
docs/: HOST_INTEGRATION.md
examples/: host_min.py
tests/integration/: test_cloud_backends.py  test_ollama_live.py
tests/unit/: test_cloud_backends.py  test_cloud_backends_providers.py  test_obs.py  test_providers.py  test_tool_parsing.py
