[project]
name = "cogno-synapse"
version = "0.1.0"
description = "Model-transport layer for the Cogno cognitive pipeline — LLM + embedding backend protocols, Ollama + cloud backends, a single-backend factory, and a resilient fallback chain"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Vinicius Vale" }]
maintainers = [{ name = "Sudoers AI" }]
keywords = ["llm", "embeddings", "ollama", "openai", "anthropic", "fallback", "agents", "function-calling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
# Core (protocols + Ollama + OpenAI-compatible HTTP backends + fallback) needs
# only httpx; resilience (breaker/retry/metrics) comes from cogno-homeo. Cloud
# provider SDKs are lazy-imported behind the optional extras below.
dependencies = ["httpx>=0.20.0", "cogno-homeo"]

[project.urls]
Homepage = "https://github.com/sudoers-ai/cogno-synapse"
Repository = "https://github.com/sudoers-ai/cogno-synapse"
Issues = "https://github.com/sudoers-ai/cogno-synapse/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.8",
]
# Cloud LLM backends — each SDK is lazy-imported, so install only what you use.
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.34"]
groq = ["groq>=0.9"]
gemini = ["google-genai>=0.3"]
bedrock = ["boto3>=1.34"]
llm = ["openai>=1.0", "anthropic>=0.34", "groq>=0.9", "google-genai>=0.3", "boto3>=1.34"]

[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cogno_synapse*"]

[tool.setuptools.package-data]
cogno_synapse = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
files = ["cogno_synapse"]
warn_unused_ignores = true
